--- a/nginx.conf
+++ b/nginx.conf
@@ -24,4 +24,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;  # Pass the original protocol (HTTP or HTTPS) used by the client to the upstream server.
         }
     }
+	# When port 3000 and 3001 are accessed, The proxy pass to port 80 (home location)
+	server {
+		listen 3000;
+		listen 3001;
+
+		location / {
+			proxy_pass http://localhost;
+		}
+	}
 }
